--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,8 @@ SQLAlchemy==1.0.13
 traitlets==4.2.1
 watson-developer-cloud==0.13.0
 Werkzeug==0.11.10
+numpy==1.11.0
+nltk==3.2.1
+pyyaml==3.11
+scipy==0.17.1
+scikit_learn==0.17.1
