--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Jinja2==2.8
 MarkupSafe==0.23
 pexpect==4.1.0
 pickleshare==0.7.2
+psycopg2==2.6.1
 ptyprocess==0.5.1
 pysolr==3.5.0
 requests==2.10.0
