--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ decorator==4.0.10
 Flask==0.11.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
+fuzzywuzzy==0.10.0
 gnureadline==6.3.3
 ipdb==0.10.0
 ipython==4.2.0
